data/derived/comb/progs/unify/prog6991.ml.out
Characters 174-176:
  in wwhile(gs, b);;
            ^^
Error: This expression has type (int -> int) -> int
       but an expression was expected of type
         (int -> int) -> (int -> int) * bool
       Type int is not compatible with type (int -> int) * bool 
